Fix footer alignment form

--- a/resources/assets/sass/footer.scss
+++ b/resources/assets/sass/footer.scss
@@ -57,7 +57,7 @@
     @include breakpoint(tablet) {
         flex-direction: row;
         margin-top: 0;
-        margin-right: 4em;
+        margin-left: 4em;
     }
 }
 
